# agentix

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  do_commits.sh  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  lint.yml  release.yml
agentix/: __init__.py  board.py  cache.py  cli.py  concurrent.py  config.py  controller.py  core.py  dryrun.py  exceptions.py  history.py  kanban.py  metrics.py  pipeline.py  priority.py  progress.py  registry.py  report.py  retry.py  scheduler.py  templates.py  themes.py  validation.py  visualize.py  webhooks.py
agentix/agents/: __init__.py  base.py  codex_agent.py  review_agent.py
docs/: index.md
examples/: cicd_orchestration.py  code_review_pipeline.py  data_processing_workflow.py  pipeline.yaml  simple_workflow.py
tests/: test_all.py  test_core.py  test_dryrun.py  test_engine.py  test_integration.py  test_kanban.py  test_pipeline.py  test_priority.py  test_scheduler.py
